[tool.poetry]
name = "runnel"
version = "0.1.0b1"
description = "Distributed event processing for Python based on Redis Streams"
readme = "README.md"
keywords = ["data", "stream", "processing", "redis", "async"]
authors = ["Matt Westcott <m.westcott@gmail.com>"]
license = "LGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
yaaredis = "^3.0.0"
hiredis = "^2.2.3"
pydantic = "^1.5.1"
typer = "^0.3.0"
structlog = "^20.1.0"
colorama = "^0.4.6"
aiostream = "^0.4.1"
croniter = "^0.3.34"
pytz = "^2020.1"
anyio = "2.2.0"

# For the 'fast' bundle
uvloop = { version = "^0.17.0", optional = true }
xxhash = { version = "^1.4.4", optional = true }
orjson = { version = "^3.2.1", optional = true }
lz4 = { version = "^3.1.0", optional = true }

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
isort = "^4.3.21"
flake8 = "^3.8.3"
faker = "^4.1.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-benchmark = "^3.2.3"
sphinx = "^3.1.2"
sphinx_rtd_theme = "^0.5.0"
pytest-mock = "^3.2.0"
freezegun = "^0.3.15"
mypy = "^1.4.1"
tox = "^3.19.0"
coveralls = "^2.1.2"

[tool.poetry.scripts]
runnel = "runnel.cli:cli"

[tool.poetry.extras]
fast = ["uvloop", "xxhash", "orjson", "lz4"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
